@@ -22,7 +22,10 @@ Revision history for SPVM
         * Add global_optimize_each field to SPVM::Builder::CC
         * SPVM::Builder::CC uses global_cc_each, global_ccflags_each, global_optimize_each field.
         * Add is_exe method to SPVM::Builder::Config and SPVM::Builder::Config::Exe.
-          
+        * Add before_link field to SPVM::Builder::Config
+        * Execute a before_link field callback before the link in SPVM::Bulder::CC link method.
+        * Execute a before_link field callback before the link in SPVM::Bulder::Exe link method.
+        
         [NON BACKWORD COMPATIBLE CHANGES]
         * Change cc_each second argument of SPVM::Builder::Config from each source file to optional argument as hash reference
           - source_file
